<resources>
    <string name="app_name">Alzheimers Cares</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">The caregiver is the light in the darkness of Alzheimer\'s disease for those who suffer.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_tips">Tips</string>
    <string name="menu_personal_informations">Pacients Informations</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_useful_links">Useful Links</string>
    <string name="menu_about_what_is">What is?</string>
    <string name="menu_about_symptoms">Symptoms</string>
    <string name="menu_about_diagnostic">Diagnostic</string>
    <string name="menu_about_treatment">Treatment</string>
    <string name="menu_about_stages">Stages</string>
    <string name="menu_about_research">Researches</string>
    <string name="menu_about_dementia">Dementia</string>
    <string name="request_call_phone">Accept permission to make the call</string>
    <string name="text_what_is">Alzheimer\'s disease is an incurable disease that worsens over time, but can and should be treated.#* Almost all of its victims are elderly people. Perhaps, therefore, the disease has been erroneously known as \"sclerosis\" or \"decay\".#* The disease presents as dementia, or loss of cognitive functions (memory, orientation, attention and language), caused by the death of brain cells.#* When diagnosed at the outset, it is possible to delay its progress and have more control over the symptoms, ensuring a better quality of life for the patient and the family.#* His official name refers to the physician Alois Alzheimer, the first to describe the disease in 1906. He studied and published the case of his patient Auguste Deter, a healthy woman who, at age 51, developed a progressive loss of memory , disorientation, language disorder (with difficulty understanding and expressing himself), becoming unable to take care of himself.#* After the death of Auguste, at age 55, Dr. Alzheimer examined his brain and described the changes that are now known as characteristics of the disease.#* It is not known why Alzheimer\'s disease occurs, but some brain lesions characteristic of this disease are known.#* The two main alterations are the senile plaques arising from the abnormally produced beta-amyloid protein deposit and the neurofibrillary tangles, fruits of the hyperphosphorylation of the tau protein.#* Another change observed is the reduction of the number of nerve cells (neurons) and the connections between them (synapses), with progressive reduction of the cerebral volume.#* Recent studies have shown that these brain changes were already in place before the onset of dementia symptoms.#* Therefore, when the clinical manifestations that allow the establishment of the diagnosis appear, it is said that the demential phase of the disease began.#* Neural losses do not occur homogeneously. The areas most commonly affected are those of nerve cells (neurons) responsible for memory and executive functions that involve planning and performing complex functions. Other areas tend to be hit later, increasing losses.#* It is estimated that there are around 35.6 million people with Alzheimer\'s disease in the world.#* In Brazil, there are about 1.2 million cases, most of them still undiagnosed.</string>
    <string name="text_what_is_link">http://abraz.org.br/web/sobre-alzheimer/o-que-e-alzheimer/</string>
    <string name="text_symptoms">Memory loss that disrupts daily life may be a symptom of Alzheimer\'s or other dementia.#* Alzheimer\'s is a brain disease that causes a slow decline in memory, thinking and reasoning skills.#* There are 10 warning signs and symptoms. If you notice any of them, don\'t ignore them. Schedule an appointment with your doctor.#*  Memory loss that disrupts daily life: One of the most common signs of Alzheimer’s disease, especially in the early stage, is forgetting recently learned information.#* Others include forgetting important dates or events, asking for the same information over and over, and increasingly needing to rely on memory aids (e.g., reminder notes or electronic devices) or family members for things they used to handle on their own.#* What\'s a typical age-related change? Sometimes forgetting names or appointments, but remembering them later.  Challenges in planning or solving problems: Some people may experience changes in their ability to develop and follow a plan or work with numbers. They may have trouble following a familiar recipe or keeping track of monthly bills. They may have difficulty concentrating and take much longer to do things than they did before.#* What\'s a typical age-related change? Making occasional errors when balancing a checkbook.#*  Difficulty completing familiar tasks at home, at work or at leisure: People with Alzheimer\'s often find it hard to complete daily tasks. Sometimes, people may have trouble driving to a familiar location, managing a budget at work or remembering the rules of a favorite game.#* What\'s a typical age-related change? Occasionally needing help to use the settings on a microwave or to record a television show.  Confusion with time or place: People with Alzheimer\'s can lose track of dates, seasons and the passage of time. They may have trouble understanding something if it is not happening immediately. Sometimes they may forget where they are or how they got there.#* What\'s a typical age-related change? Getting confused about the day of the week but figuring it out later. Trouble understanding visual images and spatial relationships: For some people, having vision problems is a sign of Alzheimer\'s. They may have difficulty reading, judging distance and determining color or contrast, which may cause problems with driving.#* What\'s a typical age-related change? Vision changes related to cataracts.  New problems with words in speaking or writing: People with Alzheimer\'s may have trouble following or joining a conversation. They may stop in the middle of a conversation and have no idea how to continue or they may repeat themselves. They may struggle with vocabulary, have problems finding the right word or call things by the wrong name (e.g., calling a \"watch\" a \"hand-clock\").#* What\'s a typical age-related change? Sometimes having trouble finding the right word.  Misplacing things and losing the ability to retrace steps A person with Alzheimer\'s disease may put things in unusual places. They may lose things and be unable to go back over their steps to find them again. Sometimes, they may accuse others of stealing. This may occur more frequently over time.#* What\'s a typical age-related change? Misplacing things from time to time and retracing steps to find them. Decreased or poor judgment People with Alzheimer\'s may experience changes in judgment or decision-making. For example, they may use poor judgment when dealing with money, giving large amounts to telemarketers. They may pay less attention to grooming or keeping themselves clean.#* What\'s a typical age-related change? Making a bad decision once in a while. Withdrawal from work or social activities A person with Alzheimer\'s may start to remove themselves from hobbies, social activities, work projects or sports. They may have trouble keeping up with a favorite sports team or remembering how to complete a favorite hobby. They also may avoid being social because of the changes they have experienced.#* What\'s a typical age-related change? Sometimes feeling weary of work, family and social obligations. Changes in mood and personality The mood and personalities of people with Alzheimer\'s can change. They can become confused, suspicious, depressed, fearful or anxious. They may be easily upset at home, at work, with friends or in places where they are out of their comfort zone What\'s a typical age-related change? Developing very specific ways of doing things and becoming irritable when a routine is disrupted.</string>
    <string name="text_symptoms_link">https://www.alz.org/alzheimers-dementia/10_signs</string>
    <string name="text_diagnosis">Diagnosing someone with Alzheimer\'s is no easy task.#* The elderly family thinks it is just a problem of old age and does not seek the help of a specialist.#* When noticing Alzheimer\'s symptoms, the bearer himself tends to hide them out of shame. The hospital needs to be aware, if it identifies something unusual, it must be the elderly being treated next week, even if it has not had a geriatrician or a neurologist.#* It is necessary to differentiate the normal forgetfulness of manifestations more serious and more frequent, that are the symptoms of the disease.#* It is not because the person is older that they will not remember what is important.#* In dementia pictures of Alzheimer\'s disease, it is usually a summary of symptoms (months or years) and worsening of brain functions.#* A diagnosis of cerebral tissue of the physical after his is falence. Prior to this, such examination is not indicated because it presents risks to the patient.#* In practice, the diagnosis of Alzheimer\'s disease is clinical, that is, decision-making by a physician, who will define, from the tests and the patient\'s history, the main hypothesis for the cause of dementia.#* Medical monitoring is essential if you are to identify yourself correctly or not in Alzheimer\'s. Other diseases, such as hypertension - which hinder brain oxygenation - can also lead to memory loss and dementia symptoms.#* There are also trends that can be treated, such as one brought on by hypothyroidism.#* In 2002, the Ministry of Health published an ordinance that establishes within the scope of the Unified Health System (SUS) the Assistance Program for Alzheimer\'s Disease Patients.#* This program works through the Centers of Reference in Health Care of the Elderly, which are related to the diagnosis, the treatment of the patients and the orientation to the relatives and to Alzheimer\'s patients.#* At any time, there are 26 Reference Centers already registered in Brazil.#* The Ministry of Health, through the Secretariat of Labor Management and Health Education, has been investing in the training of SUS professionals to care for the elderly.#* The date of our research is recent, for until the 1950s, the life expectancy of the population was approximately 40 years, he notes.#* Currently, the age is 71 years old, recalls the coordinator.#* Estimates from the Ministry of Health indicate that 73% of people over 60 depend exclusively on the SUS.#* The care given to patients suffering from Alzheimer\'s occurs not only in the Reference Centers for Health Care of the Elderly, but also in the outpatient health units.#* Exams Among the main complementary tests used in the basic routine to investigate patients with dementia, for example, Alzheimer\'s (the most common type of dementia) are: Bloodtests Image examination of the brain.#* In selected cases, it is also necessary to remove the fluid from the spine. More sophisticated exams such as functional imaging of the brain are not routinely needed.</string>
    <string name="text_diagnosis_link">https://www.minhavida.com.br/saude/temas/alzheimer</string>
    <string name="text_btn_register">REGISTER</string>
    <string name="input_text_name">Name</string>
    <string name="input_text_id">Id</string>
    <string name="input_text_health">Health Plan Card</string>
    <string name="input_text_alergies_warnings">Describe alergies and Warnings</string>
</resources>