<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_tips" />
        <item
            android:id="@+id/nav_personal_information"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_personal_informations" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_reminders" />
        <item
            android:id="@+id/nav_useful_links"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_useful_links" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
