<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".ui.PersonalInfoAddActivity">

<LinearLayout
    android:id="@+id/user_photo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/pacient_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@color/background_light_grey"
        android:src="@drawable/ic_person_white"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/edit_photo_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"

        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_photo">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_text_name"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_input_layout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/id_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_text_id"
                android:inputType="number"
                android:maxLength="14"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/health_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_input_layout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/health_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_text_health"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/alergies_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/health_input_layout">

        <EditText
            android:id="@+id/alergies_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:maxLines="6"
            android:hint="@string/input_text_alergies_warnings"
            android:gravity="top"
            android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
            android:imeOptions="actionDone"/>


    </LinearLayout>

</LinearLayout>


<Button
    android:id="@+id/btn_add_new_pacient"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:background="@color/primary_dark"
    android:text="@string/text_btn_register"
    android:textColor="@color/background_light_grey" />


</RelativeLayout>